[package]
name = "semtech-udp"
version = "0.7.4-alpha.0"
authors = ["Louis Thiery <thiery.louis@gmail.com>"]
edition = "2021"
description = "Semtech UDP provides serialization and deserialization of packets complying with the Semtech UDP protocol"
license = "Apache-2.0"
keywords = ["lorawan", "iot", "lpwan", "semtech", "gwmp"]
repository = "https://github.com/helium/semtech-udp/"

[[example]]
name = "server"
required-features = ["server"]

[[example]]
name = "server_split"
required-features = ["server"]

[[example]]
name = "client"
required-features = ["client"]

[[example]]
name = "gwmp-mux"
required-features = ["client", "server"]

[dependencies]
arrayref = "0"
base64 = "0"
macaddr = "1"
num_enum = "0"
rand = "0"
serde = { version = "1", default-features = false,  features = ["derive"] }
serde_json = "1"
serde_repr = "0"
tokio = { version = "1", optional = true, features = ["rt", "net", "sync", "time"]}
thiserror = "1"
triggered  = "0"

[dev-dependencies]
structopt = { version = "0.3.2", default-features = false }
slog = "2"
slog-async = "2"
slog-term = "2"
slog-syslog = "0"
slog-scope = "4"
slog-stdlog = "4"

[dev-dependencies.tokio]
version = "1"
features = ["macros", "sync", "time", "rt-multi-thread", "io-std", "io-util", "signal"]

[features]
default = []
server = ["tokio"]
client = ["tokio"]

