[package]
name = "semtech-udp"
version = "0.12.0"
authors = ["Louis Thiery <thiery.louis@gmail.com>"]
edition = "2021"
description = "Semtech UDP provides serialization and deserialization of packets complying with the Semtech UDP protocol"
license = "Apache-2.0"
keywords = ["lorawan", "iot", "lpwan", "semtech", "gwmp"]
repository = "https://github.com/helium/semtech-udp/"

[[example]]
name = "server"
required-features = ["server"]

[[example]]
name = "server_split"
required-features = ["server"]

[[example]]
name = "client"
required-features = ["client"]

[dependencies]
arrayref = "0"
base64 = ">=0.21"
lora-modulation = ">=0.1.5"
macaddr = "1"
num_enum = "0"
rand = "0"
serde = { version = "1", default-features = false,  features = ["derive"] }
serde_json = "1"
serde_repr = "0"
tokio = { version = "1", optional = true, features = ["rt", "net", "sync", "time", "macros"]}
thiserror = "1"
triggered  = "0"

[dev-dependencies]
structopt = { version = "0.3.2", default-features = false }
hex = "0"

[dev-dependencies.tokio]
version = "1"
features = ["macros", "sync", "time", "rt-multi-thread"]

[features]
default = []
server = ["tokio"]
client = ["tokio"]
